--- a/src/pl/betoncraft/betonquest/editor/resource/lang/lang_de.properties
+++ b/src/pl/betoncraft/betonquest/editor/resource/lang/lang_de.properties
@@ -79,11 +79,11 @@ identifier-not-null=NPC-ID muss angegeben werden!
 identifier-number=Citizens NPC-ID muss eine positive Zahl sein!
 binding-not-null=Ein Gespräch muss angegeben werden!
 priority-number=Priorität muss eine positive Zahl sein!
-exception=Es gab einige unerwartete Ausnahme!
+exception=Es gab einige unerwartete Ausnahmen!
 send-it=Bitte melde diesen Textblock auf GitHub:
 address=github.com/Co0sh/BetonQuest-Editor/issues
 copy=Kopie
 close=Schließen
 select-objective=Ziel muss angegeben werden!
-location=Oprt
+location=Ort
 priority=Priorität
